# IIC2685-WS7

./: CMakeLists.txt
Material Gaspar Iduya/lab1/: CMakeLists.txt  package.xml
Material Gaspar Iduya/lab1/data/: pose_list.txt
Material Gaspar Iduya/lab1/nodes/: nodo_dead_reckoning_nav.py  nodo_pose_loader.py  nodo_traductor.py
Material_Maximiliano/ros_ws/: .bashrc
Material_Maximiliano/ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Material_Maximiliano/ros_ws/install/cmd_vel_mux/include/cmd_vel_mux/: cmd_vel_mux.hpp
Material_Maximiliano/ros_ws/install/cmd_vel_mux/lib/cmd_vel_mux/: cmd_vel_mux_node
Material_Maximiliano/ros_ws/install/cmd_vel_mux/share/cmd_vel_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Material_Maximiliano/ros_ws/install/iic_lab1/lib/iic_lab1/: dead_reckoning_nav.py  obstacle_detector.py
Material_Maximiliano/ros_ws/install/iic_lab1/share/iic_lab1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Material_Maximiliano/ros_ws/log/: latest_build
Material_Maximiliano/ros_ws/src/iic_lab1/: CMakeLists.txt  package.xml
Material_Maximiliano/ros_ws/src/iic_lab1/config/: square_poses.txt
Material_Maximiliano/ros_ws/src/iic_lab1/launch/: accion_y_percepcion.xml  avanzar_y_rotar.xml
Material_Maximiliano/ros_ws/src/iic_lab1/scripts/: dead_reckoning_nav.py  obstacle_detector.py
data/: pose_list.txt
launch/: avanzar_y_rotar.xml
nodes/: nodo_dead_reckoning_nav.py  nodo_pose_loader.py  nodo_traductor.py
ros2_ws/: README.md
(+53 files in other folders)
